# llm-from-scratch

./: .dockerignore  .gitignore  README.md  pyproject.toml
bpe_tokenizer/: bp_max_heap.py  tokenize_script.py  tokenizer.py  train_bpe.py
deploy/runpod_owt_h100_90min/: Dockerfile  Dockerfile.dockerignore  README.md  deploy_endpoint.py  handler.py  requirements.txt  test_input.json
experiments/owt_h100_90min/: config.json  metrics.csv
experiments/tiny_model/: config.json  metrics.csv
experiments/tiny_model_v1/: config.json
scripts/: plot_metrics.py
src/: decoding.py  training_lm.py
src/bpe_tokenizer/: train_bpe.py
src/models/: multihead_self_attention.py  scaled_dot_product_attention.py  softmax.py  transformer_block.py  transformer_lm.py
src/modules/: adamw.py  cross_entropy.py  embedding.py  gradient_clipping.py  learning_rate_schedule.py  linear.py  multihead_self_attention.py  rmsnorm.py  rope.py  scaled_dot_product_attention.py  sgd.py  swiglu.py  transformer_block.py  transformer_lm.py
src/training/: checkpointing.py  data_loading.py  training_lm.py
tokenizer_params/: owt_merges.txt  owt_vocab.txt  tiny_merges.txt  tiny_vocab.txt
